log
Thu 16 May 2024 12:12:55 AM UTC: 
 tests:  0|5
total_score: 0/70
8522df4
Thu 16 May 2024 03:27:29 PM UTC: 
 sudoku.c | 27 +++++++++++++++++++++++++--
 1 file changed, 25 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
fe4ee94
Thu 16 May 2024 05:12:06 PM UTC: 
 sudoku.c | 81 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 80 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
5ecf43d
Thu 16 May 2024 05:13:02 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
60d134e
Thu 16 May 2024 05:25:04 PM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  6|2
total_score: 45/70
da4db2d
Thu 16 May 2024 05:25:46 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
31ad3a8
Sat 18 May 2024 04:13:21 PM UTC: 
 sudoku.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
4225a4f
Sat 18 May 2024 05:05:11 PM UTC: 
 sudoku.c | 50 +++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 49 insertions(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
52ed783
Sat 18 May 2024 05:05:39 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|1
total_score: 60/70
27f92f8
Sat 18 May 2024 06:10:21 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  8|1
total_score: 60/70
5803991
Sat 18 May 2024 06:11:17 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
3c15231
Sat 18 May 2024 06:16:47 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  8|1
total_score: 60/70
20a13db
Sat 18 May 2024 06:18:28 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
7b1c623
Sat 18 May 2024 06:21:39 PM UTC: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  8|1
total_score: 60/70
ab1c28f
Sat 18 May 2024 06:26:40 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|1
total_score: 60/70
910303a
Sat 18 May 2024 06:27:25 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  8|1
total_score: 60/70
3a42794
Sat 18 May 2024 06:28:56 PM UTC: 
 sudoku.c | 10 ++--------
 1 file changed, 2 insertions(+), 8 deletions(-)
 tests:  8|1
total_score: 60/70
86e42e2
Sat 18 May 2024 06:37:56 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
0ef948a
Sat 18 May 2024 06:38:09 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
fe35af3
Sat 18 May 2024 06:39:39 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|1
total_score: 60/70
3fa4cf3
Sat 18 May 2024 06:40:30 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|1
total_score: 60/70
007f580
Sat 18 May 2024 06:42:15 PM UTC: 
 sudoku.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  8|1
total_score: 60/70
01842c6
Sat 18 May 2024 06:47:50 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  8|1
total_score: 60/70
8dac012
Sat 18 May 2024 06:48:05 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
708343b
Sat 18 May 2024 06:48:49 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:239:1: error: expected ‘;’ before ‘}’ token
  239 | }
      | ^
Compilation failed
1c01262
